[package]
name = "control-center"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.16.0", features = ["full"] }
futures = "0.3.28"
iced =  { version = "0.10.0", features = ["qr_code", "tokio"]}
iced_aw = { version = "0.6.0", features = ["card", "modal"] }
tokio = "1.29.1"

